Add ability to calculate RA/DEC

--- a/indi-knro/CMakeLists.txt
+++ b/indi-knro/CMakeLists.txt
@@ -15,11 +15,7 @@ find_package(CFITSIO REQUIRED)
 find_package(INDI REQUIRED)
 find_package(ZLIB REQUIRED)
 find_package(MODBUS REQUIRED)
-
-macro_optional_find_package(Nova)
-macro_bool_to_01(NOVA_FOUND HAVE_NOVA_H)
-macro_log_feature(NOVA_FOUND "libnova" "A general purpose, double precision, Celestial Mechanics, Astrometry and Astrodynamics library" "http://libnova.sourceforge.net" FALSE "0.12.1" "Needed by INDI.")
-
+find_package(Nova REQUIRED)
 find_package(ALUT REQUIRED)
 
 if (ALUT_FOUND STREQUAL "NO")
@@ -40,11 +36,7 @@ include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 include_directories( ${ALUT_INCLUDE_DIR})
 include_directories( ${MODBUS_INCLUDE_DIR})
-
-
-if (NOVA_FOUND)
-    include_directories(${NOVA_INCLUDE_DIR})
-endif (NOVA_FOUND)
+include_directories(${NOVA_INCLUDE_DIR})
 
 ########### KNRO ###########
 set(indiknro_SRCS
