--- a/.gitattributes
+++ b/.gitattributes
@@ -413,6 +413,7 @@ libindi/README.drivers -text
 libindi/TODO -text
 libindi/base64.c -text
 libindi/base64.h -text
+libindi/config.h.cmake -text
 libindi/drivers.xml -text
 libindi/drivers/ccd/fli_ccd.c -text
 libindi/drivers/filter_wheel/fli_wheel.c -text
