--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,25 @@
 3rdparty/indi-apogee/debian/rules -text
 3rdparty/indi-apogee/indi_apogee.xml -text
 3rdparty/indi-apogee/indialta.c -text
+3rdparty/indi-gphoto/AUTHORS -text
+3rdparty/indi-gphoto/CMakeLists.txt -text
+3rdparty/indi-gphoto/COPYING.LIB -text
+3rdparty/indi-gphoto/INSTALL -text
+3rdparty/indi-gphoto/README -text
+3rdparty/indi-gphoto/debian/changelog -text
+3rdparty/indi-gphoto/debian/compat -text
+3rdparty/indi-gphoto/debian/control -text
+3rdparty/indi-gphoto/debian/copyright -text
+3rdparty/indi-gphoto/debian/dirs -text
+3rdparty/indi-gphoto/debian/install -text
+3rdparty/indi-gphoto/debian/rules -text
+3rdparty/indi-gphoto/gphoto_ccd.cpp -text
+3rdparty/indi-gphoto/gphoto_ccd.h -text
+3rdparty/indi-gphoto/gphoto_driver.c -text
+3rdparty/indi-gphoto/gphoto_driver.h -text
+3rdparty/indi-gphoto/gphoto_readimage.c -text
+3rdparty/indi-gphoto/gphoto_readimage.h -text
+3rdparty/indi-gphoto/indi_gphoto.xml -text
 3rdparty/indi-maxdomeii/maxdomeii.cpp -text
 3rdparty/indi-maxdomeii/maxdomeii.h -text
 3rdparty/indi-maxdomeii/maxdomeiidriver.c -text
