Moving the rest of the drivers to 3rd party repo

--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,42 @@
 3rdparty/indi-maxdomeii/maxdomeii.h -text
 3rdparty/indi-maxdomeii/maxdomeiidriver.c -text
 3rdparty/indi-maxdomeii/maxdomeiidriver.h -text
+3rdparty/indi-meadedsi/AUTHORS -text
+3rdparty/indi-meadedsi/COPYING.LIB -text
+3rdparty/indi-meadedsi/ChangeLog -text
+3rdparty/indi-meadedsi/INSTALL -text
+3rdparty/indi-meadedsi/README -text
+3rdparty/indi-meadedsi/indi_meadedsi_ccd.xml -text
+3rdparty/indi-qhy/AUTHORS -text
+3rdparty/indi-qhy/CMakeLists.txt -text
+3rdparty/indi-qhy/COPYING.LIB -text
+3rdparty/indi-qhy/INSTALL -text
+3rdparty/indi-qhy/README -text
+3rdparty/indi-qhy/debian/changelog -text
+3rdparty/indi-qhy/debian/compat -text
+3rdparty/indi-qhy/debian/control -text
+3rdparty/indi-qhy/debian/indi-qhy.copyright -text
+3rdparty/indi-qhy/debian/indi-qhy.dirs -text
+3rdparty/indi-qhy/debian/indi-qhy.install -text
+3rdparty/indi-qhy/debian/qhy-firmware.copyright -text
+3rdparty/indi-qhy/debian/qhy-firmware.dirs -text
+3rdparty/indi-qhy/debian/qhy-firmware.install -text
+3rdparty/indi-qhy/debian/rules -text
+3rdparty/indi-qhy/firmware/85-qhy.rules -text
+3rdparty/indi-qhy/firmware/LICENSE -text
+3rdparty/indi-qhy/firmware/README -text
+3rdparty/indi-qhy/firmware/qhy5.hex -text
+3rdparty/indi-qhy/firmware/qhy5loader.hex -text
+3rdparty/indi-qhy/indi_qhy.xml -text
+3rdparty/indi-qhy/qhy5_driver.c -text
+3rdparty/indi-qhy/qhy5_driver.h -text
+3rdparty/indi-qhy/qhy_ccd.c -text
+3rdparty/indi-qsi/AUTHORS -text
+3rdparty/indi-qsi/INSTALL -text
+3rdparty/indi-qsi/README -text
+3rdparty/indi-qsi/config.h.cmake -text
+3rdparty/indi-qsi/indi_qsi.xml -text
+3rdparty/indi-qsi/qsi_ccd.cc -text
 3rdparty/indi-sbig/.cproject -text
 3rdparty/indi-sbig/.project -text
 3rdparty/indi-sbig/AUTHORS -text
