--- a/.gitattributes
+++ b/.gitattributes
@@ -119,6 +119,15 @@ cmake_modules/FindVorbis.cmake -text
 cmake_modules/MacroBoolTo01.cmake -text
 cmake_modules/MacroLogFeature.cmake -text
 cmake_modules/MacroOptionalFindPackage.cmake -text
+debian/indi-apogee/changelog -text
+debian/indi-apogee/compat -text
+debian/indi-apogee/control -text
+debian/indi-apogee/copyright -text
+debian/indi-apogee/indi-apogee.dirs -text
+debian/indi-apogee/indi-apogee.install -text
+debian/indi-apogee/postinst.ex -text
+debian/indi-apogee/postrm.ex -text
+debian/indi-apogee/rules -text
 debian/indi-sbig/debian/changelog -text
 debian/indi-sbig/debian/compat -text
 debian/indi-sbig/debian/control -text
