--- a/.gitattributes
+++ b/.gitattributes
@@ -128,6 +128,7 @@ debian/libindi/compat -text
 debian/libindi/control -text
 debian/libindi/copyright -text
 debian/libindi/libindi-dev.install -text
+debian/libindi/libindi-dev.links -text
 debian/libindi/libindi0.install -text
 debian/libindi/rules -text
 debian/libqsi/changelog -text
