Adding Gerry's classes for telescope, ccd, filter wheel and focuser after adapting them to use default driver class. Also using map now instead of vector to store list of pointers

--- a/.gitattributes
+++ b/.gitattributes
@@ -568,6 +568,18 @@ libindi/libs/indibase/basedriver.h -text
 libindi/libs/indibase/defaultdriver.cpp -text
 libindi/libs/indibase/defaultdriver.h -text
 libindi/libs/indibase/indibase.h -text
+libindi/libs/indibase/indiccd.cpp -text
+libindi/libs/indibase/indiccd.h -text
+libindi/libs/indibase/indidevice.cpp -text
+libindi/libs/indibase/indidevice.h -text
+libindi/libs/indibase/indifilterwheel.cpp -text
+libindi/libs/indibase/indifilterwheel.h -text
+libindi/libs/indibase/indifocuser.cpp -text
+libindi/libs/indibase/indifocuser.h -text
+libindi/libs/indibase/inditelescope.cpp -text
+libindi/libs/indibase/inditelescope.h -text
+libindi/libs/indibase/usbdevice.cpp -text
+libindi/libs/indibase/usbdevice.h -text
 libindi/libs/indicom.c -text
 libindi/libs/indicom.h -text
 libindi/libs/lilxml.c -text
