--- a/.gitattributes
+++ b/.gitattributes
@@ -137,6 +137,18 @@ cmake_modules/FindVorbis.cmake -text
 cmake_modules/MacroBoolTo01.cmake -text
 cmake_modules/MacroLogFeature.cmake -text
 cmake_modules/MacroOptionalFindPackage.cmake -text
+debian/fliusb/changelog -text
+debian/fliusb/compat -text
+debian/fliusb/control -text
+debian/fliusb/copyright -text
+debian/fliusb/dirs -text
+debian/fliusb/dkms.conf -text
+debian/fliusb/fliusb-dkms.install -text
+debian/fliusb/fliusb-dkms.postinst -text
+debian/fliusb/fliusb-dkms.postrm -text
+debian/fliusb/fliusb-dkms.prerm -text
+debian/fliusb/postinst.dpkg-dist -text
+debian/fliusb/rules -text
 debian/indi-apogee/changelog -text
 debian/indi-apogee/compat -text
 debian/indi-apogee/control -text
