libfli is now a separate package

--- a/.gitattributes
+++ b/.gitattributes
@@ -179,6 +179,19 @@ debian/indi-sbig/debian/compat -text
 debian/indi-sbig/debian/control -text
 debian/indi-sbig/debian/copyright -text
 debian/indi-sbig/debian/rules -text
+debian/libfli/changelog -text
+debian/libfli/compat -text
+debian/libfli/control -text
+debian/libfli/copyright -text
+debian/libfli/libfli1-dev.dirs -text
+debian/libfli/libfli1-dev.install -text
+debian/libfli/libfli1-dev.links -text
+debian/libfli/libfli1.dirs -text
+debian/libfli/libfli1.install -text
+debian/libfli/libfli1.links -text
+debian/libfli/postinst.ex -text
+debian/libfli/postrm.ex -text
+debian/libfli/rules -text
 debian/libindi/changelog -text
 debian/libindi/compat -text
 debian/libindi/control -text
