Debian rules update

--- a/.gitattributes
+++ b/.gitattributes
@@ -202,6 +202,19 @@ debian/indi-sbig/debian/compat -text
 debian/indi-sbig/debian/control -text
 debian/indi-sbig/debian/copyright -text
 debian/indi-sbig/debian/rules -text
+debian/libapogee/changelog -text
+debian/libapogee/compat -text
+debian/libapogee/control -text
+debian/libapogee/copyright -text
+debian/libapogee/libapogee2-dev.dirs -text
+debian/libapogee/libapogee2-dev.install -text
+debian/libapogee/libapogee2-dev.links -text
+debian/libapogee/libapogee2.dirs -text
+debian/libapogee/libapogee2.install -text
+debian/libapogee/libapogee2.links -text
+debian/libapogee/postinst.ex -text
+debian/libapogee/postrm.ex -text
+debian/libapogee/rules -text
 debian/libfli/changelog -text
 debian/libfli/compat -text
 debian/libfli/control -text
