Adding iEQ45 driver by Ignacio Mas

--- a/.gitattributes
+++ b/.gitattributes
@@ -559,6 +559,10 @@ libindi/drivers/telescope/celestrongps.cpp -text
 libindi/drivers/telescope/celestrongps.h -text
 libindi/drivers/telescope/celestronprotocol.c -text
 libindi/drivers/telescope/celestronprotocol.h -text
+libindi/drivers/telescope/ieq45.cpp -text
+libindi/drivers/telescope/ieq45.h -text
+libindi/drivers/telescope/ieq45driver.c -text
+libindi/drivers/telescope/ieq45driver.h -text
 libindi/drivers/telescope/intelliscope.c -text
 libindi/drivers/telescope/lx200_16.cpp -text
 libindi/drivers/telescope/lx200_16.h -text
