--- a/.gitattributes
+++ b/.gitattributes
@@ -140,6 +140,7 @@
 3rdparty/indi-sx/sxcam.h -text
 3rdparty/indi-sx/sxccd.cpp -text
 3rdparty/indi-sx/sxccd.h -text
+3rdparty/indi-sx/sxtest.cpp -text
 3rdparty/indi-sx/sxwheel.cpp -text
 3rdparty/indi-sx/sxwheel.h -text
 cmake_modules/FindALUT.cmake -text
