Starting encapsulation of data effort for all INDI base classes

--- a/.gitattributes
+++ b/.gitattributes
@@ -653,6 +653,8 @@ libindi/libs/indibase/indifilterwheel.cpp -text
 libindi/libs/indibase/indifilterwheel.h -text
 libindi/libs/indibase/indifocuser.cpp -text
 libindi/libs/indibase/indifocuser.h -text
+libindi/libs/indibase/indiguiderinterface.cpp -text
+libindi/libs/indibase/indiguiderinterface.h -text
 libindi/libs/indibase/inditelescope.cpp -text
 libindi/libs/indibase/inditelescope.h -text
 libindi/libs/indibase/indiusbdevice.cpp -text
