Going back, launchpad can accomodate this structure as well

--- a/.gitattributes
+++ b/.gitattributes
@@ -232,14 +232,14 @@ debian/libfli/libfli1.links -text
 debian/libfli/postinst.ex -text
 debian/libfli/postrm.ex -text
 debian/libfli/rules -text
-debian/libindi/debian/changelog -text
-debian/libindi/debian/compat -text
-debian/libindi/debian/control -text
-debian/libindi/debian/copyright -text
-debian/libindi/debian/libindi-dev.install -text
-debian/libindi/debian/libindi-dev.links -text
-debian/libindi/debian/libindi0.install -text
-debian/libindi/debian/rules -text
+debian/libindi/changelog -text
+debian/libindi/compat -text
+debian/libindi/control -text
+debian/libindi/copyright -text
+debian/libindi/libindi-dev.install -text
+debian/libindi/libindi-dev.links -text
+debian/libindi/libindi0.install -text
+debian/libindi/rules -text
 debian/libqsi/changelog -text
 debian/libqsi/compat -text
 debian/libqsi/control -text
