--- a/.gitattributes
+++ b/.gitattributes
@@ -99,6 +99,7 @@
 3rdparty/indi-qhy/qhy5_driver.c -text
 3rdparty/indi-qhy/qhy5_driver.h -text
 3rdparty/indi-qhy/qhy_ccd.c -text
+3rdparty/indi-qsi/99-qsi.rules -text
 3rdparty/indi-qsi/AUTHORS -text
 3rdparty/indi-qsi/INSTALL -text
 3rdparty/indi-qsi/README -text
