correcting debian path

--- a/.gitattributes
+++ b/.gitattributes
@@ -257,14 +257,14 @@ debian/maxdomeii/compat -text
 debian/maxdomeii/control -text
 debian/maxdomeii/copyright -text
 debian/maxdomeii/rules -text
-debian/sbig/debian/changelog -text
-debian/sbig/debian/compat -text
-debian/sbig/debian/control -text
-debian/sbig/debian/copyright -text
-debian/sbig/debian/libsbigudrv2-dev.links -text
-debian/sbig/debian/libsbigudrv2.install -text
-debian/sbig/debian/libsbigudrv2.links -text
-debian/sbig/debian/rules -text
+debian/sbig/changelog -text
+debian/sbig/compat -text
+debian/sbig/control -text
+debian/sbig/copyright -text
+debian/sbig/libsbigudrv2-dev.links -text
+debian/sbig/libsbigudrv2.install -text
+debian/sbig/libsbigudrv2.links -text
+debian/sbig/rules -text
 libapogee/.cproject -text
 libapogee/.project -text
 libapogee/AUTHORS -text
