correcting indi-sbig debian path

--- a/.gitattributes
+++ b/.gitattributes
@@ -203,11 +203,11 @@ debian/indi-qsi/compat -text
 debian/indi-qsi/control -text
 debian/indi-qsi/copyright -text
 debian/indi-qsi/rules -text
-debian/indi-sbig/debian/changelog -text
-debian/indi-sbig/debian/compat -text
-debian/indi-sbig/debian/control -text
-debian/indi-sbig/debian/copyright -text
-debian/indi-sbig/debian/rules -text
+debian/indi-sbig/changelog -text
+debian/indi-sbig/compat -text
+debian/indi-sbig/control -text
+debian/indi-sbig/copyright -text
+debian/indi-sbig/rules -text
 debian/indi-sx/changelog -text
 debian/indi-sx/compat -text
 debian/indi-sx/control -text
