Applying patch to fix package installation

--- a/.gitattributes
+++ b/.gitattributes
@@ -193,7 +193,9 @@ debian/indi-qhy/changelog -text
 debian/indi-qhy/compat -text
 debian/indi-qhy/control -text
 debian/indi-qhy/indi-qhy.copyright -text
+debian/indi-qhy/indi-qhy.install -text
 debian/indi-qhy/qhy-firmware.copyright -text
+debian/indi-qhy/qhy-firmware.install -text
 debian/indi-qhy/rules -text
 debian/indi-qsi/changelog -text
 debian/indi-qsi/compat -text
