--- a/.gitattributes
+++ b/.gitattributes
@@ -667,84 +667,53 @@ libindi/tools/evalINDI.c -text
 libindi/tools/getINDIproperty.c -text
 libindi/tools/setINDIproperty.c -text
 libqsi/AUTHORS -text
+libqsi/CCDCamera.cpp -text
+libqsi/CCDCamera.h -text
+libqsi/CMakeLists.txt -text
 libqsi/COPYING -text
+libqsi/CameraID.cpp -text
+libqsi/CameraID.h -text
 libqsi/ChangeLog -text
+libqsi/ConvertUTF.c -text
+libqsi/ConvertUTF.h -text
+libqsi/Filter.cpp -text
+libqsi/Filter.h -text
+libqsi/FilterWheel.cpp -text
+libqsi/FilterWheel.h -text
+libqsi/HotPixelMap.cpp -text
+libqsi/HotPixelMap.h -text
 libqsi/INSTALL -text
-libqsi/Makefile.am -text
-libqsi/Makefile.in -text
 libqsi/NEWS -text
+libqsi/QSICriticalSection.h -text
+libqsi/QSIError.h -text
+libqsi/QSIFeatures.cpp -text
+libqsi/QSIFeatures.h -text
+libqsi/QSILog.cpp -text
+libqsi/QSILog.h -text
+libqsi/QSI_Global.h -text
+libqsi/QSI_Interface.cpp -text
+libqsi/QSI_Interface.h -text
+libqsi/QSI_PacketWrapper.cpp -text
+libqsi/QSI_PacketWrapper.h -text
+libqsi/QSI_Registry.h -text
+libqsi/QSI_States.h -text
+libqsi/QSI_USBWrapper.cpp -text
+libqsi/QSI_USBWrapper.h -text
 libqsi/README -text
+libqsi/SimpleIni.h -text
 libqsi/TODO -text
-libqsi/aclocal.m4 -text
-libqsi/build-aux/config.guess -text
-libqsi/build-aux/config.sub -text
-libqsi/build-aux/depcomp -text
-libqsi/build-aux/install-sh -text
-libqsi/build-aux/ltmain.sh -text
-libqsi/build-aux/missing -text
-libqsi/config.guess -text
-libqsi/config.h.in -text
-libqsi/config.sub -text
-libqsi/configure -text
-libqsi/configure.ac -text
+libqsi/WinTypes.h -text
+libqsi/cmake_modules/FindFTDI.cmake -text
+libqsi/config.h.cmake -text
 libqsi/demo_src/ExternalTrigger.cpp -text
-libqsi/demo_src/Makefile.am -text
-libqsi/demo_src/Makefile.in -text
+libqsi/demo_src/qsiapitest.cpp -text
 libqsi/demo_src/qsidemo.cpp -text
-libqsi/depcomp -text
-libqsi/doc/Makefile -text
-libqsi/doc/Makefile.am -text
-libqsi/doc/Makefile.in -text
 libqsi/doc/QSI[!!-~]Linux[!!-~]API[!!-~]Reference[!!-~]Manual.pdf -text svneol=unset#unset
-libqsi/install-sh -text
-libqsi/lib/CCDCamera.cpp -text
-libqsi/lib/CCDCamera.h -text
-libqsi/lib/CameraID.cpp -text
-libqsi/lib/CameraID.h -text
-libqsi/lib/ConvertUTF.c -text
-libqsi/lib/ConvertUTF.h -text
-libqsi/lib/Filter.cpp -text
-libqsi/lib/Filter.h -text
-libqsi/lib/FilterWheel.cpp -text
-libqsi/lib/FilterWheel.h -text
-libqsi/lib/HotPixelMap.cpp -text
-libqsi/lib/HotPixelMap.h -text
-libqsi/lib/Makefile.am -text
-libqsi/lib/Makefile.in -text
-libqsi/lib/QSICriticalSection.h -text
-libqsi/lib/QSIError.h -text
-libqsi/lib/QSIFeatures.cpp -text
-libqsi/lib/QSIFeatures.h -text
-libqsi/lib/QSILog.cpp -text
-libqsi/lib/QSILog.h -text
-libqsi/lib/QSI_Global.h -text
-libqsi/lib/QSI_Interface.cpp -text
-libqsi/lib/QSI_Interface.h -text
-libqsi/lib/QSI_PacketWrapper.cpp -text
-libqsi/lib/QSI_PacketWrapper.h -text
-libqsi/lib/QSI_Registry.h -text
-libqsi/lib/QSI_States.h -text
-libqsi/lib/QSI_USBWrapper.cpp -text
-libqsi/lib/QSI_USBWrapper.h -text
-libqsi/lib/SimpleIni.h -text
-libqsi/lib/WinTypes.h -text
-libqsi/lib/ftd2xx.h -text
-libqsi/lib/qsiapi.cpp -text
-libqsi/lib/qsiapi.h -text
-libqsi/lib/qsicopyright.txt -text
-libqsi/lib/wincompat.h -text
-libqsi/libqsiapi-config.in -text
-libqsi/ltmain.sh -text
-libqsi/m4/libtool.m4 -text
-libqsi/m4/ltoptions.m4 -text
-libqsi/m4/ltsugar.m4 -text
-libqsi/m4/ltversion.m4 -text
-libqsi/m4/lt~obsolete.m4 -text
-libqsi/missing -text
-libqsi/mkinstalldirs -text
-libqsi/src/Makefile.am -text
-libqsi/src/Makefile.in -text
-libqsi/src/qsiapitest.cpp -text
+libqsi/ftd2xx.h -text
+libqsi/qsiapi.cpp -text
+libqsi/qsiapi.h -text
+libqsi/qsicopyright.txt -text
+libqsi/wincompat.h -text
 sbig/99-sbig.rules -text
 sbig/CMakeLists.txt -text
 sbig/libsbigudrv32.bin -text
