--- a/.gitattributes
+++ b/.gitattributes
@@ -212,6 +212,7 @@ debian/indi-sx/changelog -text
 debian/indi-sx/compat -text
 debian/indi-sx/control -text
 debian/indi-sx/copyright -text
+debian/indi-sx/indi-sx.install -text
 debian/indi-sx/rules -text
 debian/libapogee/changelog -text
 debian/libapogee/compat -text
