--- a/.gitattributes
+++ b/.gitattributes
@@ -68,6 +68,8 @@
 3rdparty/indi-fli/README -text
 3rdparty/indi-fli/config.h.cmake -text
 3rdparty/indi-fli/fli_ccd.c -text
+3rdparty/indi-fli/fli_ccd.cpp -text
+3rdparty/indi-fli/fli_ccd.h -text
 3rdparty/indi-fli/fli_pdf.c -text
 3rdparty/indi-fli/indi_fli.xml -text
 3rdparty/indi-gphoto/AUTHORS -text
