--- a/.gitattributes
+++ b/.gitattributes
@@ -209,6 +209,7 @@ cmake_modules/FindMODBUS.cmake -text
 cmake_modules/FindNova.cmake -text
 cmake_modules/FindQSI.cmake -text
 cmake_modules/FindSBIG.cmake -text
+cmake_modules/FindUSB-1.cmake -text
 cmake_modules/FindUSB.cmake -text
 cmake_modules/FindVorbis.cmake -text
 cmake_modules/MacroBoolTo01.cmake -text
