--- a/.gitattributes
+++ b/.gitattributes
@@ -189,6 +189,8 @@
 3rdparty/indi-sx/hid_win.c -text svneol=unset#text/plain
 3rdparty/indi-sx/hidapi.h -text svneol=unset#text/plain
 3rdparty/indi-sx/indi_sx.xml -text
+3rdparty/indi-sx/sxao.cpp -text svneol=unset#text/plain
+3rdparty/indi-sx/sxao.h -text svneol=unset#text/plain
 3rdparty/indi-sx/sxccd.cpp -text
 3rdparty/indi-sx/sxccd.h -text
 3rdparty/indi-sx/sxccdusb.cpp -text
