.- Reorganize skeleton files .- Firsts version of alternate firmware template .- add DEFAULT_SKELETON_FILE in duconfig.h.in and indiduino.cpp

--- a/.gitattributes
+++ b/.gitattributes
@@ -63,13 +63,17 @@
 3rdparty/indi-apogee/indialta.c -text
 3rdparty/indi-duino/CMakeLists.txt -text
 3rdparty/indi-duino/README -text
+3rdparty/indi-duino/devices/CMakeLists.txt -text
+3rdparty/indi-duino/devices/Firmwares/StandardFirmata.ino -text
+3rdparty/indi-duino/devices/Firmwares/TemplateINDIDUINO.ino -text
+3rdparty/indi-duino/devices/digital_inputs_sk.xml -text
+3rdparty/indi-duino/devices/indi_duino.xml -text
+3rdparty/indi-duino/devices/switcher_sk.xml -text
+3rdparty/indi-duino/devices/various_sk.xml -text
 3rdparty/indi-duino/duconfig.h -text
 3rdparty/indi-duino/duconfig.h.in -text
-3rdparty/indi-duino/indi_duino.xml -text
 3rdparty/indi-duino/indiduino.cpp -text
 3rdparty/indi-duino/indiduino.h -text
-3rdparty/indi-duino/indiduino_sk.xml -text
-3rdparty/indi-duino/libfirmata/NachoFirmata/NachoFirmata.ino -text
 3rdparty/indi-duino/libfirmata/examples/ask_analog_pin.cpp -text
 3rdparty/indi-duino/libfirmata/examples/ask_digital_pin.cpp -text
 3rdparty/indi-duino/libfirmata/examples/blink_pin.cpp -text
@@ -79,8 +83,6 @@
 3rdparty/indi-duino/libfirmata/src/arduino.h -text
 3rdparty/indi-duino/libfirmata/src/firmata.cpp -text
 3rdparty/indi-duino/libfirmata/src/firmata.h -text
-3rdparty/indi-duino/switcher_sk.xml -text
-3rdparty/indi-duino/various_sk.xml -text
 3rdparty/indi-fishcamp/AUTHORS -text
 3rdparty/indi-fishcamp/CMakeLists.txt -text
 3rdparty/indi-fishcamp/ChangeLog -text
