--- a/.gitattributes
+++ b/.gitattributes
@@ -70,6 +70,7 @@
 3rdparty/indi-duino/devices/digital_inputs_sk.xml -text
 3rdparty/indi-duino/devices/focuser_sk.xml -text
 3rdparty/indi-duino/devices/indi_duino.xml -text
+3rdparty/indi-duino/devices/simple_switcher_sk.xml -text
 3rdparty/indi-duino/devices/stepper_sk.xml -text
 3rdparty/indi-duino/devices/switcher_sk.xml -text
 3rdparty/indi-duino/devices/various_sk.xml -text
